# SodaDownloader

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  main.cpp
decrypt_m4a/: decrypt.go  main.go  readme
include/: StscEntry.h  box.h  decryptor.cpp  decryptor.h  initializer.h  lyric_convertor.h  mp4_box.h  music_info.h  parser.h  requester.h  utils.h
src/: cxxopts.h  decrypt_utils.cpp  decrypt_utils.h  decryptor.cpp  decryptor.h  initializer.cpp  lyric_convertor.cpp  lyric_convertor.h  media_info.cpp  media_info.h  model_info.cpp  model_info.h  mp4_box.cpp  mp4_box.h  parser.cpp  requester.cpp  requester.h  stsc_entry.cpp  stsc_entry.h  utils.cpp  utils.h
